--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dangrek&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&display=swap');
 .Sansita{
     font-family: 'Sansita Swashed', cursive;
@@ -6,6 +7,13 @@
 .Dangrek{
     font-family: 'Dangrek', cursive;
 }
+.roboto{
+    font-family: 'Roboto', sans-serif,cursive;
+}
 .card-img{
     filter: blur(1.5px);
+}
+
+.hidden{
+   visibility: hidden;
 }
